[metadata]
name = dftd4
version = 3.5.0
description = Python API of the DFT-D4 project
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sebastian Ehlert
author_email = awvwgk@gmail.com
url = https://github.com/dftd4/dftd4
license = LGPL-3.0-or-later
license_files =
    COPYING
    COPYING.LESSER
classifiers =
    Development Status :: 5 - Production
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Fortran
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = find:
install_requires =
    cffi
    numpy
tests_require =
    pytest
    pytest-cov
    ase
    qcelemental
    tomli
python_requires = >=3.6

[options.extras_require]
ase = ase
qcschema = qcelemental
parameters = tomli

[coverage:run]
omit =
    */test_*.py

[aliases]
test=pytest
