# This file is part of dftd4.
# SPDX-Identifier: LGPL-3.0-or-later
#
# dftd4 is free software: you can redistribute it and/or modify it under
# the terms of the Lesser GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# dftd4 is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# Lesser GNU General Public License for more details.
#
# You should have received a copy of the Lesser GNU General Public License
# along with dftd4.  If not, see <https://www.gnu.org/licenses/>.

fsrcs += files(
  'argparser.f90',
  'c_api.f90',
  'class_molecule.f90',
  'class_param.f90',
  'class_results.f90',
  'class_set.f90',
  'class_wsc.f90',
  'coordination_number.f90',
  'disp_output.f90',
  'd4_calculation.f90',
  'dftd4.f90',
  'dfuncpar.f90',
  'eeq_model.f90',
  'error.f90',
  'f_api.f90',
  'geometry_reader.f90',
  'mctc_constants.f90',
  'mctc_econv.f90',
  'mctc_environment.f90',
  'mctc_global.f90',
  'mctc_param.f90',
  'mctc_readin.f90',
  'mctc_strings.f90',
  'mctc_systools.f90',
  'mctc_timings.f90',
  'printout.f90',
  'pbc.f90',
  'pbc_tools.f90',
)
